[package]
name = "misskey-id"
version = "0.1.0"
edition = "2021"

description = "Parse and generate misskey's id"
license = "MIT"
readme = "README.md"
repository = "https://github.com/1673beta/misskey-id"
keywords = ["misskey", "id", "parse", "generate"]

[dependencies]
chrono = "0.4.40"
lazy_static = "1.5.0"
nanoid = "0.4.0"
rand = "0.9.0"
regex = "1.11.1"
ulid = "1.2.0"
